packages/meta/src/editordef/parser/PiEditGrammar.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Editor_Definition: peg$parseEditor_Definition },
      peg$startRuleFunction  = peg$parseEditor_Definition,

      peg$c0 = "editor",
      peg$c1 = peg$literalExpectation("editor", false),
      peg$c2 = "for",
      peg$c3 = peg$literalExpectation("for", false),
      peg$c4 = "language",
      peg$c5 = peg$literalExpectation("language", false),
      peg$c6 = function(name, languageName, concepts) {
              return creator.createLanguageEditor({
                  "name"          : name,
                  "languageName"  : languageName,
                  "conceptEditors": concepts,
                  "location": location()
              });
          },
      peg$c7 = function(concept, projection, trigger, symbol) {
          return creator.createConceptEditor({
              "concept"   : concept,
              "trigger"   : trigger,
              "symbol"    : symbol,
              "projection": projection,
              "location": location()
          });
      },
      peg$c8 = "@projection",
      peg$c9 = peg$literalExpectation("@projection", false),
      peg$c10 = function(name, lines) {
                          return creator.createProjection({ "lines" : lines, "name": name, "location": location() });
                    },
      peg$c11 = /^[ ]/,
      peg$c12 = peg$classExpectation([" "], false, false),
      peg$c13 = function(s) {
                          return creator.createIndent( { "indent": s.join(""), "location": location() });
                      },
      peg$c14 = function(exp, join, keyword) {
                      return creator.createPropertyProjection( {  "expression": exp, "listJoin": join, "keyword":keyword, "location": location() });
                  },
      peg$c15 = "@keyword",
      peg$c16 = peg$literalExpectation("@keyword", false),
      peg$c17 = function(text) {return text;},
      peg$c18 = function(l) {
                          let directionObject = l.find(j => !!j.direction);
                          let joinTypeObject  = l.find(j => !!j.joinType);
                          let joinTextObject  = l.find(j => !!j.joinText);

                          return creator.createListJoin( {"direction": (!!directionObject ? directionObject.direction : undefined),
                                                          "joinType" : (!!joinTypeObject ? joinTypeObject.joinType    : undefined),
                                                          "joinText" : (!!joinTextObject ? joinTextObject.joinText    : undefined),
                                                          "location": location()} );
                      },
      peg$c19 = function(direction) { return {"direction" : direction, "location": location() }; },
      peg$c20 = function(type) { return {"joinType"  : type, "location": location()      }; },
      peg$c21 = function(t) { return {"joinText"  : t, "location": location()         }; },
      peg$c22 = "[",
      peg$c23 = peg$literalExpectation("[", false),
      peg$c24 = "]",
      peg$c25 = peg$literalExpectation("]", false),
      peg$c26 = function(t) {
                      return t.join("");
                  },
      peg$c27 = "@horizontal",
      peg$c28 = peg$literalExpectation("@horizontal", false),
      peg$c29 = "@vertical",
      peg$c30 = peg$literalExpectation("@vertical", false),
      peg$c31 = function(dir) {
                          return creator.createListDirection( {"direction": dir, "location": location() } );
                      },
      peg$c32 = "@separator",
      peg$c33 = peg$literalExpectation("@separator", false),
      peg$c34 = "@terminator",
      peg$c35 = peg$literalExpectation("@terminator", false),
      peg$c36 = function(joinType) {
                          return creator.createJoinType( {"type": joinType, "location": location() } );
                      },
      peg$c37 = "${",
      peg$c38 = peg$literalExpectation("${", false),
      peg$c39 = "}",
      peg$c40 = peg$literalExpectation("}", false),
      peg$c41 = function(chars) {
                      return creator.createText( chars.join("") );
                   },
      peg$c42 = function(src) {
                      return src;
                  },
      peg$c43 = peg$anyExpectation(),
      peg$c44 = "\r",
      peg$c45 = peg$literalExpectation("\r", false),
      peg$c46 = "\n",
      peg$c47 = peg$literalExpectation("\n", false),
      peg$c48 = function() {
                          return creator.createNewline();
                      },
      peg$c49 = function(items) {
                          return creator.createLine( {"items": items} );
                      },
      peg$c50 = "?",
      peg$c51 = peg$literalExpectation("?", false),
      peg$c52 = function(optional, items) {
                          return creator.createSubProjection( {"optional": optional, "items": items} );
                      },
      peg$c53 = function(referredName) {
          return expCreator.createConceptReference({"name": referredName, "location": location()})
      },
      peg$c54 = "@trigger",
      peg$c55 = peg$literalExpectation("@trigger", false),
      peg$c56 = "\"",
      peg$c57 = peg$literalExpectation("\"", false),
      peg$c58 = function(value) {
              return value
          },
      peg$c59 = "@symbol",
      peg$c60 = peg$literalExpectation("@symbol", false),
      peg$c61 = "priority",
      peg$c62 = peg$literalExpectation("priority", false),
      peg$c63 = ":",
      peg$c64 = peg$literalExpectation(":", false),
      peg$c65 = function(name) { return expCreate.createClassifierReference( { "name": name, "location":location()}); },
      peg$c66 = function(functionExpression) { return functionExpression; },
      peg$c67 = function(instanceExpression) { return instanceExpression; },
      peg$c68 = function(expression) { return expression; },
      peg$c69 = function(simpleExpression) { return simpleExpression; },
      peg$c70 = function(conceptName, instance) {
              return expCreate.createInstanceExp ({
                  "sourceName": conceptName,
                  "instanceName": instance,
                  "location": location()
              })
          },
      peg$c71 = function(sourceName, appliedfeature) {
                      return expCreate.createExpression ({
                          "sourceName": sourceName,
                          "appliedfeature": appliedfeature,
                          "location": location()
                      })
                  },
      peg$c72 = function(sourceName) {
                      return expCreate.createExpression ({
                          "sourceName": sourceName,
                          "location": location()
                      })
                  },
      peg$c73 = ".",
      peg$c74 = peg$literalExpectation(".", false),
      peg$c75 = function(sourceName, appliedfeature) {
        return expCreate.createAppliedFeatureExp
      ( {
          "sourceName": sourceName,
          "appliedfeature": appliedfeature,
          "location": location()
        })
      },
      peg$c76 = function(sourceName, head, v) { return v; },
      peg$c77 = function(sourceName, head, tail) { return [head].concat(tail); },
      peg$c78 = function(sourceName, actualparams) {
        return expCreate.createFunctionCall ({
          "sourceName": sourceName,
          "actualparams": actualparams,
          "location": location()
        })
      },
      peg$c79 = function(number) {
          return expCreate.createSimpleExpression
      ( {
          "value": !isNaN(parseInt(number, 10)) ? parseInt(number, 10) : 0, // the default for parseInt is not (!) the decimal system
          "location": location()
        })
      },
      peg$c80 = "{",
      peg$c81 = peg$literalExpectation("{", false),
      peg$c82 = "(",
      peg$c83 = peg$literalExpectation("(", false),
      peg$c84 = ")",
      peg$c85 = peg$literalExpectation(")", false),
      peg$c86 = ",",
      peg$c87 = peg$literalExpectation(",", false),
      peg$c88 = ";",
      peg$c89 = peg$literalExpectation(";", false),
      peg$c90 = "=",
      peg$c91 = peg$literalExpectation("=", false),
      peg$c92 = "+",
      peg$c93 = peg$literalExpectation("+", false),
      peg$c94 = peg$otherExpectation("whitespace"),
      peg$c95 = /^[ \t\n\r]/,
      peg$c96 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c97 = peg$otherExpectation("required whitespace"),
      peg$c98 = peg$otherExpectation("variable"),
      peg$c99 = function(first, rest) { return first + rest.join(""); },
      peg$c100 = function(chars) { return chars.join(""); },
      peg$c101 = /^[a-zA-Z]/,
      peg$c102 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
      peg$c103 = /^[a-zA-Z0-9_$]/,
      peg$c104 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "$"], false, false),
      peg$c105 = /^[*a-zA-Z0-9' \/\-[\]+<>=#$_.,!?@~%\^&*-=+(){}:;<>?]/,
      peg$c106 = peg$classExpectation(["*", ["a", "z"], ["A", "Z"], ["0", "9"], "'", " ", "/", "-", "[", "]", "+", "<", ">", "=", "#", "$", "_", ".", ",", "!", "?", "@", "~", "%", "^", "&", ["*", "="], "+", "(", ")", "{", "}", ":", ";", "<", ">", "?"], false, false),
      peg$c107 = /^[0-9]/,
      peg$c108 = peg$classExpectation([["0", "9"]], false, false),
      peg$c109 = function(nums) { return nums.join(""); },
      peg$c110 = "//",
      peg$c111 = peg$literalExpectation("//", false),
      peg$c112 = /^[\n\r\u2028\u2029]/,
      peg$c113 = peg$classExpectation(["\n", "\r", "\u2028", "\u2029"], false, false),
      peg$c114 = peg$otherExpectation("comment"),
      peg$c115 = "/*",
      peg$c116 = peg$literalExpectation("/*", false),
      peg$c117 = "*/",
      peg$c118 = peg$literalExpectation("*/", false),
      peg$c119 = "\\",
      peg$c120 = peg$literalExpectation("\\", false),
      peg$c121 = "/",
      peg$c122 = peg$literalExpectation("/", false),
      peg$c123 = "$",
      peg$c124 = peg$literalExpectation("$", false),
      peg$c125 = "b",
      peg$c126 = peg$literalExpectation("b", false),
      peg$c127 = function() { return "\b"; },
      peg$c128 = "f",
      peg$c129 = peg$literalExpectation("f", false),
      peg$c130 = function() { return "\f"; },
      peg$c131 = "n",
      peg$c132 = peg$literalExpectation("n", false),
      peg$c133 = function() { return "\n"; },
      peg$c134 = "r",
      peg$c135 = peg$literalExpectation("r", false),
      peg$c136 = function() { return "\r"; },
      peg$c137 = "t",
      peg$c138 = peg$literalExpectation("t", false),
      peg$c139 = function() { return "\t"; },
      peg$c140 = "u",
      peg$c141 = peg$literalExpectation("u", false),
      peg$c142 = function(digits) {
                return String.fromCharCode(parseInt(digits, 16));
              },
      peg$c143 = function(sequence) { return sequence; },
      peg$c144 = /^[^\0-\x1F"\\]/,
      peg$c145 = peg$classExpectation([["\0", "\x1F"], "\"", "\\"], true, false),
      peg$c146 = /^[0-9a-f]/,
      peg$c147 = peg$classExpectation([["0", "9"], ["a", "f"]], false, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseEditor_Definition() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;

    s0 = peg$currPos;
    s1 = peg$parsews();
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 6) === peg$c0) {
        s2 = peg$c0;
        peg$currPos += 6;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsews();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsevar();
          if (s4 !== peg$FAILED) {
            s5 = peg$parsews();
            if (s5 !== peg$FAILED) {
              if (input.substr(peg$currPos, 3) === peg$c2) {
                s6 = peg$c2;
                peg$currPos += 3;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c3); }
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parsews();
                if (s7 !== peg$FAILED) {
                  if (input.substr(peg$currPos, 8) === peg$c4) {
                    s8 = peg$c4;
                    peg$currPos += 8;
                  } else {
                    s8 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c5); }
                  }
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parsews();
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parsevar();
                      if (s10 !== peg$FAILED) {
                        s11 = peg$parsews();
                        if (s11 !== peg$FAILED) {
                          s12 = [];
                          s13 = peg$parseconceptEditor();
                          while (s13 !== peg$FAILED) {
                            s12.push(s13);
                            s13 = peg$parseconceptEditor();
                          }
                          if (s12 !== peg$FAILED) {
                            s13 = peg$parsews();
                            if (s13 !== peg$FAILED) {
                              peg$savedPos = s0;
                              s1 = peg$c6(s4, s10, s12);
                              s0 = s1;
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseconceptEditor() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseconceptRef();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsecurly_begin();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsews();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseprojection();
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parsetrigger();
            if (s5 === peg$FAILED) {
              s5 = null;
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parsesymbol();
              if (s6 === peg$FAILED) {
                s6 = null;
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parsecurly_end();
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c7(s1, s4, s5, s6);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseprojection() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 11) === peg$c8) {
      s1 = peg$c8;
      peg$currPos += 11;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c9); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsews();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsevar();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseprojection_begin();
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = peg$parseline();
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              s6 = peg$parseline();
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseprojection_end();
              if (s6 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c10(s3, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsetemplateSpace() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    if (peg$c11.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c12); }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        if (peg$c11.test(input.charAt(peg$currPos))) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c12); }
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c13(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseproperty_projection() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;
